--- a/.github/workflows/trigger-build.pipeline.yml
+++ b/.github/workflows/trigger-build.pipeline.yml
@@ -31,6 +31,7 @@ jobs:
   trigger-component-builds:
     runs-on: ubuntu-latest
     needs: set-build-number
+    permissions: write-all
     strategy:
       matrix:
         component: [component-a]
