--- a/.github/workflows/trigger-build.pipeline.yml
+++ b/.github/workflows/trigger-build.pipeline.yml
@@ -31,7 +31,6 @@ jobs:
   trigger-component-builds:
     runs-on: ubuntu-latest
     needs: set-build-number
-    permissions: write-all
     strategy:
       matrix:
         component: [component-a]
@@ -40,7 +39,7 @@ jobs:
         run: |
           curl -X POST \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
           https://api.github.com/repos/dieguscl/${{ matrix.component }}/actions/workflows/build.yml/dispatches \
           -d '{"ref": "main", "inputs": {"build_number": "$build_number"}}'
 
