--- a/.github/workflows/trigger-build.pipeline.yml
+++ b/.github/workflows/trigger-build.pipeline.yml
@@ -45,7 +45,6 @@ jobs:
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
           https://api.github.com/repos/dieguscl/${{ matrix.component }}/actions/workflows/build.yml/dispatches \
-          -d '{"ref": "main", "inputs": {"build_number": "'"$build_number"'"}}'
-        env:
-          build_number: ${{ needs.set-build-number.outputs.build_number }}
+          -d '{"ref": "main", "inputs": {"build_number": "${{ needs.set-build-number.outputs.build_number }}"}}'
+
 
